--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!--Smoothies==============-->
     <section class="smoothies">
-        <h2 class="smoothies__heading heading heading--orange">What are the smoothies?</h2>
+        <h2 class="smoothies__title title title--orange">What are the smoothies?</h2>
         <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
             (milk, yogurt,
             ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
@@ -99,38 +99,38 @@
             milk, nuts,
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
-        <div class="smoothies__features features">
-            <div class="features__item">
-                <img class="features__img" src="" alt="">
-                <span class="features__desc">Plant Based</span>
+        <div class="smoothies__features ">
+            <div class="smoothies__item">
+                <img class="smoothies__img" src="" alt="">
+                <span class="smoothies__item-title">Plant Based</span>
             </div>
             <div class="features__item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Vegan</span>
+                <span class="features__item-title">Vegan</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Paleo</span>
+                <span class="features__item-title">Paleo</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Gluten-Free</span>
+                <span class="features__item-title">Gluten-Free</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Corn-Free</span>
+                <span class="features__item-title">Corn-Free</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Soy-Free</span>
+                <span class="features__item-title">Soy-Free</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Ayurvedic</span>
+                <span class="features__item-title">Ayurvedic</span>
             </div>
             <div class="features-item">
                 <img class="features__img" src="" alt="">
-                <span class="features__desc">Made With Love</span>
+                <span class="features__item-title">Made With Love</span>
             </div>
         </div>
     </section>
@@ -138,9 +138,9 @@
     <!--About=============-->
     <section class="about">
         <img class="about__img" src="" alt=""> 
-        <div class="about__desc desc">
-            <h2 class="desc__heading heading heading--white">What make Smoothies an 
-                <span class="desc__heading heading heading--green">awesome drink?</span></h2>
+        <div class="about__box">
+            <h2 class="about__title title title--white">What make Smoothies an 
+                <span class="about__title--green">awesome drink?</span></h2>
             <ul class="desc__list">
                 <li class="desc__item">
                     <span class="desc__item--extra-bold">Crunchy</span> Puffs Texture
@@ -172,38 +172,38 @@
     </section>
 
     <!--Product=============-->
-    <section class="product">
-        <div class="product__item">
-            <img class="product_img" src="" alt="">
-            <h4 class="product__name">Dark Chocolate Smoothie</h4>
-            <span class="produkt__capacity">100 ml</span>
-            <button class="about__btn btn btn--border-white">Buy
+    <section class="products">
+        <div class="products__item">
+            <img class="products__img" src="" alt="">
+            <h4 class="products__name">Dark Chocolate Smoothie</h4>
+            <span class="produkts__capacity">100 ml</span>
+            <button class="products__btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
         </div>
 
-        <div class="product__item">
-            <img class="product_img" src="" alt="">
-            <h4 class="product__name">Vegan Lettuce Smoothie</h4>
-            <span class="produkt__capacity">100 ml</span>
-            <button class="about__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="" alt="">
-            </button>
-        </div>
-
-        <div class="product-item">
-            <img class="product_img" src="" alt="">
-            <h4 class="product__name">Lemon Ginger Smoothie</h4>
-            <span class="produkt__capacity">100 ml</span>
+        <div class="products__item">
+            <img class="products_img" src="" alt="">
+            <h4 class="products__name">Vegan Lettuce Smoothie</h4>
+            <span class="products__capacity">100 ml</span>
             <button class="about__btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
         </div>
 
         <div class="product-item">
-            <img class="product_img" src="" alt="">
-            <h4 class="product__name">Turmeric Garlic Smoothie</h4>
-            <span class="produkt__capacity">100 ml</span>
+            <img class="products__img" src="" alt="">
+            <h4 class="products__name">Lemon Ginger Smoothie</h4>
+            <span class="products__capacity">100 ml</span>
+            <button class="about__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </button>
+        </div>
+
+        <div class="product-item">
+            <img class="products__img" src="" alt="">
+            <h4 class="products__name">Turmeric Garlic Smoothie</h4>
+            <span class="products__capacity">100 ml</span>
             <button class="about__btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
@@ -213,36 +213,41 @@
 
     <!--Story=============-->
     <section class="story">
-        <div class="story-text">
-            <h2>Our story</h2>
-            <p>
+        <div class="story__about">
+            <h2 class="story__title title title--orange">Our story</h2>
+            <p class="story__text text text--black">
                 As products typically using raw fruits or vegetables,
                 smoothies include dietary fiber (e.g. pulp, skin, and seeds) and
                 so are thicker than fruit juice, often with a consistency similar
                 to a milkshake.
             </p>
-            <button>Who we are<img src="" alt=""></button>
+            <button class="story__btn btn btn--border-yelloW">Who we are
+                <img class="btn__arrow-yellow" src="" alt="">
+            </button>
         </div>
-        <div class="story-picture">
-            <img src="" alt="">
-        </div>
+        <img class="story__img" src="" alt="">
+        
     </section>
 
     <!--Testimonials=============-->
     <section class="testimonials">
-        <h2>Why clients LOVE us?</h2>
-        <div class="testimonials-article">
-            <div class="article-text">
-                <q>Smoothie is great. I don't know what else to say. I wil
+        <h2 class="testimonials__title title title--orange">Why clients LOVE us?</h2>
+        <div class="testimonials__feedback">
+            <div class="testimonials__feedback-text">
+                <q class="testimonials__text text">Smoothie is great. I don't know what else to say. I wil
                     let my mum know about this, she could really make use
                     of Smoothie! Smoothie saved my business.</q>
-                <cite>- from Santa Monica, CA</cite>
+                <cite class="text text--yellow">- from Santa Monica, CA</cite>
             </div>
-            <img src="" alt="">
+            <img class="testimonials__img" src="" alt="">
         </div>
         <div class="testimonials-navigation">
-            <button><img src="" alt=""></button>
-            <button><img src="" alt=""></button>
+            <button class="testimonials__btn">
+                <img class="testimonials__arrow-left" src="" alt="">
+            </button>
+            <button class="testimonials__btn">
+                <img class="testimonials__arrow-right" src="" alt="">
+            </button>
         </div>
     </section>
 
