--- a/index.html
+++ b/index.html
@@ -253,29 +253,33 @@
 
     <!--Blog=============-->
     <section class="blog">
-        <h2>Our blog</h2>
+        <h2 class="blog__title title title--orange">Our blog</h2>
         <div>
-            <img src="" alt="">
-            <article>
-                <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
-                <time>Jun 16, 2020</time>
-                <p>If the fruit ingredients and the green vegetable
+            <img class="blog__img" src="" alt="">
+            <article class="blog__article">
+                <h3 class="blog__subtitle">ASAFOETIDA - THE NEXT TURMERIC?</h3>
+                <time class="blog__time">Jun 16, 2020</time>
+                <p class="blog__text text text--black">If the fruit ingredients and the green vegetable
                     ingredients are both juiced ahead of time, the mixed juice
                     doesn't even have to be blended like a smoothie, i.e. a
-                    green juice or anything... <a href="">Read More</a><img src="" alt=""></p>
+                    green juice or anything... 
+                    <a class="blog__link" href="">Read More</a>
+                    <img class="blog__arrow-yellow-small" src="" alt=""></p>
             </article>
         </div>
 
 
         <!--Instagram=============-->
         <section class="instagram">
-            <a href=""><img src="" alt="">ashasuperfoods</a>
-            <div class="instagram-picture">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+            <a class="instagram_link" href="">
+                <img class="instagram_logo" src="" alt="">ashasuperfoods
+            </a>
+            <div class="instagram__picture-item">
+                    <img class="instagram__img" src="" alt="">
+                    <img class="instagram__img" src="" alt="">
+                    <img class="instagram__img" src="" alt="">
+                    <img class="instagram__img" src="" alt="">
+                    <img class="instagram__img" src="" alt="">
             </div>
         </section>
 
