--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
             <div class="header__social social">
                 <ul class="social__list">
                     <li class="social__item">
-                        <a class="social__linc" href="">
+                        <a class="social__link" href="">
                             <img class="social__icon" src="" alt="">
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__linc" href="">
+                        <a class="social__link" href="">
                             <img class="social__icon" src="" alt="">
                         </a>
                     </li>
                     <li class="social__item">
-                        <a class="social__linc" href="">
+                        <a class="social__link" href="">
                             <img class="social__icon" src="" alt="">
                         </a>
                     </li>
@@ -140,7 +140,7 @@
         <img class="about__img" src="" alt=""> 
         <div class="about__box">
             <h2 class="about__title title title--white">What make Smoothies an 
-                <span class="about__title--green">awesome drink?</span></h2>
+                <span class="title--green">awesome drink?</span></h2>
             <ul class="desc__list">
                 <li class="desc__item">
                     <span class="desc__item--extra-bold">Crunchy</span> Puffs Texture
@@ -186,7 +186,7 @@
             <img class="products_img" src="" alt="">
             <h4 class="products__name">Vegan Lettuce Smoothie</h4>
             <span class="products__capacity">100 ml</span>
-            <button class="about__btn btn btn--border-white">Buy
+            <button class="products__btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
         </div>
@@ -195,7 +195,7 @@
             <img class="products__img" src="" alt="">
             <h4 class="products__name">Lemon Ginger Smoothie</h4>
             <span class="products__capacity">100 ml</span>
-            <button class="about__btn btn btn--border-white">Buy
+            <button class="products__btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
         </div>
@@ -204,7 +204,7 @@
             <img class="products__img" src="" alt="">
             <h4 class="products__name">Turmeric Garlic Smoothie</h4>
             <span class="products__capacity">100 ml</span>
-            <button class="about__btn btn btn--border-white">Buy
+            <button class="products___btn btn btn--border-white">Buy
                 <img class="btn__arrow-white" src="" alt="">
             </button>
         </div>
@@ -233,8 +233,8 @@
     <section class="testimonials">
         <h2 class="testimonials__title title title--orange">Why clients LOVE us?</h2>
         <div class="testimonials__feedback">
-            <div class="testimonials__feedback-text">
-                <q class="testimonials__text text">Smoothie is great. I don't know what else to say. I wil
+            <div class="testimonials__feedback">
+                <q class="text text--white">Smoothie is great. I don't know what else to say. I wil
                     let my mum know about this, she could really make use
                     of Smoothie! Smoothie saved my business.</q>
                 <cite class="text text--yellow">- from Santa Monica, CA</cite>
@@ -254,11 +254,11 @@
     <!--Blog=============-->
     <section class="blog">
         <h2 class="blog__title title title--orange">Our blog</h2>
-        <div>
+        <div class="blog__box">
             <img class="blog__img" src="" alt="">
             <article class="blog__article">
                 <h3 class="blog__subtitle">ASAFOETIDA - THE NEXT TURMERIC?</h3>
-                <time class="blog__time">Jun 16, 2020</time>
+                <time class="blog__date">Jun 16, 2020</time>
                 <p class="blog__text text text--black">If the fruit ingredients and the green vegetable
                     ingredients are both juiced ahead of time, the mixed juice
                     doesn't even have to be blended like a smoothie, i.e. a
@@ -285,58 +285,74 @@
 
         <!--Footer=============-->
         <footer class="footer">
-            <div class="footer-content">
-                <div class="content-logo">
-                    <a href="">
-                        <img src="" alt="">
+            <div class="footer__content">
+                <div class="footer__logo logo">
+                    <a class="logo__link" href="">
+                        <img class="logo__img" src="" alt="Organic fresh food">
                     </a>
                 </div>
 
-                <div class="information">
-                    <h4>Information</h4>
-                    <ul>
-                        <li><a href="">Search</a></li>
-                        <li><a href="">Contact us</a></li>
-                        <li><a href="">Terms & Conditions</a></li>
-                        <li><a href="">Privacy Policy</a></li>
+                <div class="footer__information ">
+                    <h4 class="footer__title">Information</h4>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a class="footer__link" href="">Search</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="">Contact us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer__link" href="">Terms & Conditions</a>
+                        </li>
+                        <li class="footer__item">
+                            <a class="footer_link" href="">Privacy Policy</a>
+                        </li>
                     </ul>
                 </div>
 
-                <div class="payment">
-                    <h4>Payment</h4>
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="footer__payment">
+                    <h4 class="footer__title">Payment</h4>
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
+                    <img class="footer__img-pay" src="" alt="">
                 </div>
 
-                <div class="subscribe">
-                    <h4>Don’t miss out!</h4>
-                    <div class="subscribe-email">
-                        <input type="email" name="myemail" placeholder="Subscribe to our newsletter">
+                <div class="footer__subscribe">
+                    <h4 class="footer__title">Don’t miss out!</h4>
+                    <div class="footer__subscribe-email">
+                        <input class="footer__input" type="email" name="myemail" placeholder="Subscribe to our newsletter">
                     </div>
-                    <div class="subscribe-social">
-                        <span>Follow Us</span>
-                        <div class="social">
-                            <a href=""><img src="" alt=""></a>
-                            <a href=""><img src="" alt=""></a>
-                            <a href=""><img src="" alt=""></a>
+                    <div class="footer__subscribe-social">
+                        <img class="footer__img-arrow" srs="" alt="">
+                        <span class="footer__subscribe-text">Follow Us</span>
+                        <div class="footer__social">
+                            <a class="footer__link" href="">
+                                <img class="footer__img-social" src="" alt="">
+                            </a>
+                            <a class="footer__link" href="">
+                                <img class="footer__img-social" src="" alt="">
+                            </a>
+                            <a class="footer__link" href="">
+                                <img class="footer__img-social" src="" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
 
-
-            <div class="footer-bottom">
-                <span>&copy; 2020. All Rights Reserved.</span>
-                <div class="go-top">
-                    <span>Go top</span>
-                    <button><img src="" alt=""></button>
+            <div class="footer__bottom">
+                <span class="footer__bottom-copy">&copy; 2020. All Rights Reserved.</span>
+                <div class="footer__wrapper">
+                    <span class="footer__wrapper-text">Go top</span>
+                    <button class="footer__btn-top ">
+                        <img class="footer__btn-img" src="" alt="">
+                    </button>
                 </div>
             </div>
         </footer>
