--- a/index.html
+++ b/index.html
@@ -256,15 +256,15 @@
         <h2 class="blog__title title title--orange">Our blog</h2>
         <div class="blog__box">
             <img class="blog__img" src="" alt="">
-            <article class="blog__article">
-                <h3 class="blog__subtitle">ASAFOETIDA - THE NEXT TURMERIC?</h3>
-                <time class="blog__date">Jun 16, 2020</time>
-                <p class="blog__text text text--black">If the fruit ingredients and the green vegetable
+            <article class="blog__article article">
+                <h3 class="article__subtitle">ASAFOETIDA - THE NEXT TURMERIC?</h3>
+                <time class="article__date">Jun 16, 2020</time>
+                <p class="article__text text text--black">If the fruit ingredients and the green vegetable
                     ingredients are both juiced ahead of time, the mixed juice
                     doesn't even have to be blended like a smoothie, i.e. a
                     green juice or anything... 
-                    <a class="blog__link" href="">Read More</a>
-                    <img class="blog__arrow-yellow-small" src="" alt=""></p>
+                    <a class="article__link" href="">Read More</a>
+                    <img class="article__arrow-yellow-small" src="" alt=""></p>
             </article>
         </div>
 
