--- a/index.html
+++ b/index.html
@@ -20,70 +20,79 @@
                         <a class="menu__link" href="">Shop</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link"  href="">Home</a>
+                        <a class="menu__link" href="">Home</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link"  href="">Story</a>
+                        <a class="menu__link" href="">Story</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link"  href="">About</a>
+                        <a class="menu__link" href="">About</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link"  href="">Blog</a>
+                        <a class="menu__link" href="">Blog</a>
                     </li>
                     <li class="menu__item">
-                        <a class="menu__link"  href="">Testimonials</a>
+                        <a class="menu__link" href="">Testimonials</a>
                     </li>
                 </ul>
             </nav>
             <div class="header__logo logo">
                 <a class="logo__link" href="">
-                    <img class="logo__img" src="" alt="">
+                    <img class="logo__img" src="./../assets/images/header/header-logo-img.png"
+                        alt="Organic fresh foods">
                 </a>
             </div>
-            <div class="header__personal personal">
-                <ul class="personal__list">
-                    <li class="personal__list-item">
-                        <a class="personal__link" href="">
-                            <img class="personal__icon-search" src="" alt="">
-                        </a>
-                    </li>
-                    <li class="personal__list-item">
-                        <a class="personal__link" href="">
-                            <img class="personal__icon-user" src="" alt="">
-                        </a>
-                    </li>
-                    <li class="personal__list-item">
-                        <a class="personal__linc-cart" href="">
-                            <img class="personal__cart-icon" src="" alt="">
-                        </a>
-                        <span class="personal__cart-count">3</span>
-                    </li>
-                </ul>
-            </div>
-            <div class="header__social social">
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt="">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt="">
-                        </a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt="">
-                        </a>
-                    </li>
-                </ul>
+            <div class="header_right-bloc">
+                <div class="header__personal personal">
+                    <ul class="personal__list">
+                        <li class="personal__list-item">
+                            <a class="personal__link" href="">
+                                <img class="personal__icon-search"
+                                    src="./../assets/images/header/header-search-icon.png" alt="search">
+                            </a>
+                        </li>
+                        <li class="personal__list-item">
+                            <a class="personal__link" href="">
+                                <img class="personal__icon-user" src="./../assets/images/header/header-user-icon.png"
+                                    alt="user">
+                            </a>
+                        </li>
+                        <li class="personal__list-item">
+                            <a class="personal__link" href="">
+                                <img class="personal__cart-icon" src="./../assets/images/header/header-cart-icon.png"
+                                    alt="cart">
+                            </a>
+                            <span class="personal__cart-count">3</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header__social social">
+                    <ul class="social__list">
+                        <li class="social__list-item">
+                            <a class="social__link" href="">
+                                <img class="social__icon-facebook"
+                                    src="./../assets/images/header/header-facebook-icon.png" alt="facebook">
+                            </a>
+                        </li>
+                        <li class="social__list-item">
+                            <a class="social__link" href="">
+                                <img class="social__icon-pinterest"
+                                    src="./../assets/images/header/header-pinterest-icon.png" alt="pinterest">
+                            </a>
+                        </li>
+                        <li class="social__list-item">
+                            <a class="social__link" href="">
+                                <img class="social__icon-instagram"
+                                    src="./../assets/images/header/header-instagram-icon.png" alt="instagram">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="header__content">
             <button class="header__btn btn btn--green-bg">Shop now
-                <img class="btn__arrow-yellow" src="" alt="">
+                <img class="btn__arrow-yellow" src="./../assets/images/header/header-btn-arrow-yellow.png" alt="">
             </button>
         </div>
     </header>
@@ -91,7 +100,8 @@
     <!--Smoothies==============-->
     <section class="smoothies">
         <h2 class="smoothies__title title title--orange">What are the smoothies?</h2>
-        <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
+        <p class="smoothies__text text text--black">A smoothie is a drink made from pureed raw fruit, vegetables, and
+            sometimes dairy products
             (milk, yogurt,
             ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients,
             such
@@ -137,9 +147,9 @@
 
     <!--About=============-->
     <section class="about">
-        <img class="about__img" src="" alt=""> 
+        <img class="about__img" src="" alt="">
         <div class="about__box">
-            <h2 class="about__title title title--white">What make Smoothies an 
+            <h2 class="about__title title title--white">What make Smoothies an
                 <span class="title--green">awesome drink?</span></h2>
             <ul class="desc__list">
                 <li class="desc__item">
@@ -149,7 +159,7 @@
                     <span class="desc__item--extra-bold">100 Calories</span> per drink
                 </li>
                 <li class="desc__item">4g Plant Protein</li>
-                <li class="desc__item">Good source of 
+                <li class="desc__item">Good source of
                     <span class="desc__item--extra-bold">Magnesium & Vitamin B6</span>
                 </li>
                 <li class="desc__item">
@@ -226,7 +236,7 @@
             </button>
         </div>
         <img class="story__img" src="" alt="">
-        
+
     </section>
 
     <!--Testimonials=============-->
@@ -262,7 +272,7 @@
                 <p class="article__text text text--black">If the fruit ingredients and the green vegetable
                     ingredients are both juiced ahead of time, the mixed juice
                     doesn't even have to be blended like a smoothie, i.e. a
-                    green juice or anything... 
+                    green juice or anything...
                     <a class="article__link" href="">Read More</a>
                     <img class="article__arrow-yellow-small" src="" alt=""></p>
             </article>
@@ -275,11 +285,11 @@
                 <img class="instagram_logo" src="" alt="">ashasuperfoods
             </a>
             <div class="instagram__picture-item">
-                    <img class="instagram__img" src="" alt="">
-                    <img class="instagram__img" src="" alt="">
-                    <img class="instagram__img" src="" alt="">
-                    <img class="instagram__img" src="" alt="">
-                    <img class="instagram__img" src="" alt="">
+                <img class="instagram__img" src="" alt="">
+                <img class="instagram__img" src="" alt="">
+                <img class="instagram__img" src="" alt="">
+                <img class="instagram__img" src="" alt="">
+                <img class="instagram__img" src="" alt="">
             </div>
         </section>
 
@@ -326,7 +336,8 @@
                 <div class="footer__subscribe">
                     <h4 class="footer__title">Don’t miss out!</h4>
                     <div class="footer__subscribe-email">
-                        <input class="footer__input" type="email" name="myemail" placeholder="Subscribe to our newsletter">
+                        <input class="footer__input" type="email" name="myemail"
+                            placeholder="Subscribe to our newsletter">
                     </div>
                     <div class="footer__subscribe-social">
                         <img class="footer__img-arrow" srs="" alt="">
@@ -351,7 +362,7 @@
                 <div class="footer__wrapper">
                     <span class="footer__wrapper-text">Go top</span>
                     <button class="footer__btn-top ">
-                        <img class="footer__btn-img" src="" alt="">
+                        <img class="footer__btn-arrow-top" src="" alt="">
                     </button>
                 </div>
             </div>
