--- a/index.html
+++ b/index.html
@@ -110,36 +110,36 @@
             nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
         </p>
         <div class="smoothies__features ">
-            <div class="smoothies__item">
-                <img class="smoothies__img" src="" alt="">
-                <span class="smoothies__item-title">Plant Based</span>
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img1.png" alt="Plant Based">
+                <span class="features__item-title">Plant Based</span>
             </div>
             <div class="features__item">
-                <img class="features__img" src="" alt="">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img2.png" alt="Vegan">
                 <span class="features__item-title">Vegan</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img3.png" alt="Paleo">
                 <span class="features__item-title">Paleo</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img4.png" alt="Gluten-Free">
                 <span class="features__item-title">Gluten-Free</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img5.png" alt="Corn-Free">
                 <span class="features__item-title">Corn-Free</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img6.png" alt="Soy-Free">
                 <span class="features__item-title">Soy-Free</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img7.png" alt="Ayurvedic">
                 <span class="features__item-title">Ayurvedic</span>
             </div>
-            <div class="features-item">
-                <img class="features__img" src="" alt="">
+            <div class="features__item">
+                <img class="features__img" src="./../assets/images/smoothies/smoothies__img8.png" alt="Made With Love">
                 <span class="features__item-title">Made With Love</span>
             </div>
         </div>
