--- a/index.html
+++ b/index.html
@@ -147,77 +147,79 @@
 
     <!--About=============-->
     <section class="about">
-        <img class="about__img" src="" alt="">
+        <img class="about__img" src="./../assets/images/about/about-Img.png" alt="">
         <div class="about__box">
             <h2 class="about__title title title--white">What make Smoothies an
                 <span class="title--green">awesome drink?</span></h2>
             <ul class="desc__list">
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">Crunchy</span> Puffs Texture
+                    <span class="desc__item--font-black">Crunchy</span> Puffs Texture
                 </li>
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">100 Calories</span> per drink
+                    <span class="desc__item--font-black">100 Calories</span> per drink
                 </li>
                 <li class="desc__item">4g Plant Protein</li>
                 <li class="desc__item">Good source of
-                    <span class="desc__item--extra-bold">Magnesium & Vitamin B6</span>
+                    <span class="desc__item--font-black">Magnesium & Vitamin B6</span>
                 </li>
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">No Sugar</span> in our Savory Flavors
+                    <span class="desc__item--font-black">No Sugar</span> in our Savory Flavors
                 </li>
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">Non-GMO, Vegan & Paleo</span>
+                    <span class="desc__item--font-black">Non-GMO, Vegan & Paleo</span>
                 </li>
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">Gluten-Free & Grain-Free</span>
+                    <span class="desc__item--font-black">Gluten-Free & Grain-Free</span>
                 </li>
                 <li class="desc__item">
-                    <span class="desc__item--extra-bold">Corn-Free & Soy-Free</span>
+                    <span class="desc__item--font-black">Corn-Free & Soy-Free</span>
                 </li>
             </ul>
             <button class="about__btn btn btn--border-orange">About Organic Smoothie
-                <img class="btn__arrow-yellow" src="" alt="">
+                <img class="btn__arrow-yellow" src="./../assets/images/about/about-btn-arrow-yellow.png" alt="">
             </button>
         </div>
     </section>
 
-    <!--Product=============-->
+    <!--Products=============-->
     <section class="products">
-        <div class="products__item">
-            <img class="products__img" src="" alt="">
+
+        <div class="products__item products__item-dark">
+            <img class="products__img" src="./../assets/images/product/products-img1.png" alt="products-img1">
             <h4 class="products__name">Dark Chocolate Smoothie</h4>
-            <span class="produkts__capacity">100 ml</span>
+            <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="" alt="">
+                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
-        <div class="products__item">
-            <img class="products_img" src="" alt="">
+        <div class="products__item products__item-vegan">
+            <img class="products__img" src="./../assets/images/product/products-img2.png" alt="products-img2">
             <h4 class="products__name">Vegan Lettuce Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="" alt="">
+                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
-        <div class="product-item">
-            <img class="products__img" src="" alt="">
+        <div class="products__item product-item-lemon">
+            <img class="products__img" src="./../assets/images/product/products-img3.png" alt="products-img3">
             <h4 class="products__name">Lemon Ginger Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="" alt="">
+                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
-        <div class="product-item">
-            <img class="products__img" src="" alt="">
+        <div class="products__item product-item-garlic">
+            <img class="products__img" src="./../assets/images/product/products-img4.png" alt="products-img4">
             <h4 class="products__name">Turmeric Garlic Smoothie</h4>
             <span class="products__capacity">100 ml</span>
-            <button class="products___btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="" alt="">
+            <button class="products__btn btn btn--border-white">Buy
+                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
+
 
     </section>
 
