--- a/index.html
+++ b/index.html
@@ -147,37 +147,39 @@
 
     <!--About=============-->
     <section class="about">
-        <img class="about__img" src="./../assets/images/about/about-Img.png" alt="">
-        <div class="about__box">
-            <h2 class="about__title title title--white">What make Smoothies an
-                <span class="title--green">awesome drink?</span></h2>
-            <ul class="desc__list">
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Crunchy</span> Puffs Texture
-                </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">100 Calories</span> per drink
-                </li>
-                <li class="desc__item">4g Plant Protein</li>
-                <li class="desc__item">Good source of
-                    <span class="desc__item--font-black">Magnesium & Vitamin B6</span>
-                </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">No Sugar</span> in our Savory Flavors
-                </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Non-GMO, Vegan & Paleo</span>
-                </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Gluten-Free & Grain-Free</span>
-                </li>
-                <li class="desc__item">
-                    <span class="desc__item--font-black">Corn-Free & Soy-Free</span>
-                </li>
-            </ul>
-            <button class="about__btn btn btn--border-orange">About Organic Smoothie
-                <img class="btn__arrow-yellow" src="./../assets/images/about/about-btn-arrow-yellow.png" alt="">
-            </button>
+        <div class="about__wrapper">
+            <img class="about__img" src="./../assets/images/about/about-Img.png" alt="">
+            <div class="about__box">
+                <h2 class="about__title title title--white">What makes Smoothie an
+                    <span class="title--green">awesome drink?</span></h2>
+                <ul class="desc__list">
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">Crunchy</span> Puffs Texture
+                    </li>
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">100 Calories</span> per drink
+                    </li>
+                    <li class="desc__item">4g Plant Protein</li>
+                    <li class="desc__item">Good source of
+                        <span class="desc__item--font-black">Magnesium & Vitamin B6</span>
+                    </li>
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">No Sugar</span> in our Savory Flavors
+                    </li>
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">Non-GMO, Vegan & Paleo</span>
+                    </li>
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">Gluten-Free & Grain-Free</span>
+                    </li>
+                    <li class="desc__item">
+                        <span class="desc__item--font-black">Corn-Free & Soy-Free</span>
+                    </li>
+                </ul>
+                <button class="about__btn btn btn--border-orange">About Organic Smoothie
+                    <img class="btn__arrow-yellow" src="./../assets/images/about/about-btn-arrow-yellow.png" alt="">
+                </button>
+            </div>
         </div>
     </section>
 
@@ -233,41 +235,50 @@
                 so are thicker than fruit juice, often with a consistency similar
                 to a milkshake.
             </p>
-            <button class="story__btn btn btn--border-yelloW">Who we are
-                <img class="btn__arrow-yellow" src="" alt="">
+            <button class="story__btn btn btn--green-bg">Who we are
+                <img class="btn__arrow-yellow" src="./../assets/images/story/story-Arrow.png" alt="">
             </button>
         </div>
-        <img class="story__img" src="" alt="">
+        <img class="story__img" src="./../assets/images/story/story-Img.png" alt="">
 
     </section>
 
     <!--Testimonials=============-->
     <section class="testimonials">
-        <h2 class="testimonials__title title title--orange">Why clients LOVE us?</h2>
+        <h2 class="testimonials__title title title--orange">Why clients <span class="title--love">LOVE </span>us?</h2>
+
         <div class="testimonials__feedback">
             <div class="testimonials__feedback">
-                <q class="text text--white">Smoothie is great. I don't know what else to say. I wil
-                    let my mum know about this, she could really make use
-                    of Smoothie! Smoothie saved my business.</q>
-                <cite class="text text--yellow">- from Santa Monica, CA</cite>
+                <div class="testimonials__feedback-inner">
+                    <q class="testimonials__text text text--white">Smoothie is great. I don't know what else to say. I
+                        wil
+                        let my mum know about this, she could really make use
+                        of Smoothie! Smoothie saved my business.</q>
+                    <cite class="text text--yellow">- from Santa Monica, CA</cite>
+                </div>
             </div>
-            <img class="testimonials__img" src="" alt="">
+            <img class="testimonials__img" src="./../assets/images/testimonials/testimonials-Img.png" alt="user">
         </div>
+
         <div class="testimonials-navigation">
             <button class="testimonials__btn">
-                <img class="testimonials__arrow-left" src="" alt="">
+                <img class="testimonials__arrow" src="./../assets/images/testimonials/testimonials-btn-arrow-left.png"
+                    alt="">
             </button>
             <button class="testimonials__btn">
-                <img class="testimonials__arrow-right" src="" alt="">
+                <img class="testimonials__arrow" src="./../assets/images/testimonials/testimonials-btn-arrow-right.png"
+                    alt="">
             </button>
         </div>
     </section>
 
     <!--Blog=============-->
     <section class="blog">
-        <h2 class="blog__title title title--orange">Our blog</h2>
-        <div class="blog__box">
-            <img class="blog__img" src="" alt="">
+        <div class="blog__box-left">
+            <h2 class="blog__title title title--orange">Our blog</h2>
+            <img class="blog__img" src="./../assets/images/blog/blog-img.png" alt="">
+        </div>
+        <div class="blog__box-right">
             <article class="blog__article article">
                 <h3 class="article__subtitle">ASAFOETIDA - THE NEXT TURMERIC?</h3>
                 <time class="article__date">Jun 16, 2020</time>
@@ -276,99 +287,99 @@
                     doesn't even have to be blended like a smoothie, i.e. a
                     green juice or anything...
                     <a class="article__link" href="">Read More</a>
-                    <img class="article__arrow-yellow-small" src="" alt=""></p>
+                    <img class="article__arrow-yellow-small" src="./../assets/images/blog/blog-arrow-yellow-small.png" alt=""></p>
             </article>
         </div>
+    </section>
 
 
-        <!--Instagram=============-->
-        <section class="instagram">
-            <a class="instagram_link" href="">
-                <img class="instagram_logo" src="" alt="">ashasuperfoods
-            </a>
-            <div class="instagram__picture-item">
-                <img class="instagram__img" src="" alt="">
-                <img class="instagram__img" src="" alt="">
-                <img class="instagram__img" src="" alt="">
-                <img class="instagram__img" src="" alt="">
-                <img class="instagram__img" src="" alt="">
+    <!--Instagram=============-->
+    <section class="instagram">
+        <a class="instagram_link" href="">
+            <img class="instagram_logo" src="./../assets/images/instagram/instagram-logo.png" alt="">ashasuperfoods
+        </a>
+        <div class="instagram__picture-item">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img2.png" alt="img2">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img3.png" alt="img3">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img4.png" alt="img4">
+            <img class="instagram__img" src="./../assets/images/instagram/instagram-img5.png" alt="img5">
+        </div>
+    </section>
+
+    <!--Footer=============-->
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__logo logo">
+                <a class="logo__link" href="">
+                    <img class="logo__img" src="./../assets/images/footer/footer-logo.png" alt="Organic fresh food">
+                </a>
             </div>
-        </section>
 
-        <!--Footer=============-->
-        <footer class="footer">
-            <div class="footer__content">
-                <div class="footer__logo logo">
-                    <a class="logo__link" href="">
-                        <img class="logo__img" src="" alt="Organic fresh food">
-                    </a>
+            <div class="footer__information">
+                <h4 class="footer__title">Information</h4>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Search</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Contact us</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Terms & Conditions</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer_link" href="">Privacy Policy</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer__payment">
+                <h4 class="footer__title">Payment</h4>
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
+            </div>
+
+            <div class="footer__subscribe">
+                <h4 class="footer__title">Don’t miss out!</h4>
+                <div class="footer__subscribe-email">
+                    <input class="footer__input" type="email" name="myemail" placeholder="Subscribe to our newsletter">
                 </div>
-
-                <div class="footer__information ">
-                    <h4 class="footer__title">Information</h4>
-                    <ul class="footer__list">
-                        <li class="footer__item">
-                            <a class="footer__link" href="">Search</a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="">Contact us</a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="">Terms & Conditions</a>
-                        </li>
-                        <li class="footer__item">
-                            <a class="footer_link" href="">Privacy Policy</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="footer__payment">
-                    <h4 class="footer__title">Payment</h4>
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                    <img class="footer__img-pay" src="" alt="">
-                </div>
-
-                <div class="footer__subscribe">
-                    <h4 class="footer__title">Don’t miss out!</h4>
-                    <div class="footer__subscribe-email">
-                        <input class="footer__input" type="email" name="myemail"
-                            placeholder="Subscribe to our newsletter">
+                <div class="footer__subscribe-social">
+                    <img class="footer__img-arrow" srs="" alt="">
+                    <span class="footer__subscribe-text">Follow Us</span>
+                    <div class="footer__social">
+                        <a class="footer__link" href="">
+                            <img class="footer__img-social" src="" alt="">
+                        </a>
+                        <a class="footer__link" href="">
+                            <img class="footer__img-social" src="" alt="">
+                        </a>
+                        <a class="footer__link" href="">
+                            <img class="footer__img-social" src="" alt="">
+                        </a>
                     </div>
-                    <div class="footer__subscribe-social">
-                        <img class="footer__img-arrow" srs="" alt="">
-                        <span class="footer__subscribe-text">Follow Us</span>
-                        <div class="footer__social">
-                            <a class="footer__link" href="">
-                                <img class="footer__img-social" src="" alt="">
-                            </a>
-                            <a class="footer__link" href="">
-                                <img class="footer__img-social" src="" alt="">
-                            </a>
-                            <a class="footer__link" href="">
-                                <img class="footer__img-social" src="" alt="">
-                            </a>
-                        </div>
-                    </div>
                 </div>
             </div>
+        </div>
 
-            <div class="footer__bottom">
-                <span class="footer__bottom-copy">&copy; 2020. All Rights Reserved.</span>
-                <div class="footer__wrapper">
-                    <span class="footer__wrapper-text">Go top</span>
-                    <button class="footer__btn-top ">
-                        <img class="footer__btn-arrow-top" src="" alt="">
-                    </button>
-                </div>
+        <div class="footer__bottom">
+            <span class="footer__bottom-copy">&copy; 2020. All Rights Reserved.</span>
+            <div class="footer__wrapper">
+                <span class="footer__wrapper-text">Go top</span>
+                <button class="footer__btn-top ">
+                    <img class="footer__btn-arrow-top" src="" alt="">
+                </button>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 
 </html>
