CSS-instagram,footer

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
         </div>
         <div class="header__content">
             <button class="header__btn btn btn--green-bg">Shop now
-                <img class="btn__arrow-yellow" src="./../assets/images/header/header-btn-arrow-yellow.png" alt="">
             </button>
         </div>
     </header>
@@ -177,7 +176,6 @@
                     </li>
                 </ul>
                 <button class="about__btn btn btn--border-orange">About Organic Smoothie
-                    <img class="btn__arrow-yellow" src="./../assets/images/about/about-btn-arrow-yellow.png" alt="">
                 </button>
             </div>
         </div>
@@ -191,7 +189,6 @@
             <h4 class="products__name">Dark Chocolate Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
@@ -200,7 +197,6 @@
             <h4 class="products__name">Vegan Lettuce Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
@@ -209,7 +205,6 @@
             <h4 class="products__name">Lemon Ginger Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
@@ -218,7 +213,6 @@
             <h4 class="products__name">Turmeric Garlic Smoothie</h4>
             <span class="products__capacity">100 ml</span>
             <button class="products__btn btn btn--border-white">Buy
-                <img class="btn__arrow-white" src="./../assets/images/product/products-btn-arrow-white1.png" alt="">
             </button>
         </div>
 
@@ -236,7 +230,7 @@
                 to a milkshake.
             </p>
             <button class="story__btn btn btn--green-bg">Who we are
-                <img class="btn__arrow-yellow" src="./../assets/images/story/story-Arrow.png" alt="">
+
             </button>
         </div>
         <img class="story__img" src="./../assets/images/story/story-Img.png" alt="">
@@ -287,7 +281,8 @@
                     doesn't even have to be blended like a smoothie, i.e. a
                     green juice or anything...
                     <a class="article__link" href="">Read More</a>
-                    <img class="article__arrow-yellow-small" src="./../assets/images/blog/blog-arrow-yellow-small.png" alt=""></p>
+                    <img class="article__arrow-yellow-small" src="./../assets/images/blog/blog-arrow-yellow-small.png"
+                        alt=""></p>
             </article>
         </div>
     </section>
@@ -329,22 +324,26 @@
                         <a class="footer__link" href="">Terms & Conditions</a>
                     </li>
                     <li class="footer__item">
-                        <a class="footer_link" href="">Privacy Policy</a>
+                        <a class="footer__link" href="">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
 
             <div class="footer__payment">
-                <h4 class="footer__title">Payment</h4>
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
+                <div class="footer__payment-wrapper">
+                    <h4 class="footer__title">Payment</h4>
+                </div>
+                <div class="footer__icons-list">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
+                </div>
             </div>
 
             <div class="footer__subscribe">
@@ -353,17 +352,17 @@
                     <input class="footer__input" type="email" name="myemail" placeholder="Subscribe to our newsletter">
                 </div>
                 <div class="footer__subscribe-social">
-                    <img class="footer__img-arrow" srs="" alt="">
+                    <img class="footer__img-arrow" src="./../assets/images/footer/footer-arrow-img.png" alt="">
                     <span class="footer__subscribe-text">Follow Us</span>
                     <div class="footer__social">
                         <a class="footer__link" href="">
-                            <img class="footer__img-social" src="" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-facebook.png" alt="">
                         </a>
                         <a class="footer__link" href="">
-                            <img class="footer__img-social" src="" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-pinterest.png" alt="">
                         </a>
                         <a class="footer__link" href="">
-                            <img class="footer__img-social" src="" alt="">
+                            <img class="footer__img-social" src="./../assets/images/footer/footer-icon-instagram.png" alt="">
                         </a>
                     </div>
                 </div>
