--- a/index.html
+++ b/index.html
@@ -352,16 +352,15 @@
                     <input class="footer__input" type="email" name="myemail" placeholder="Subscribe to our newsletter">
                 </div>
                 <div class="footer__subscribe-social">
-                    <img class="footer__img-arrow" src="./../assets/images/footer/footer-arrow-img.png" alt="">
                     <span class="footer__subscribe-text">Follow Us</span>
                     <div class="footer__social">
-                        <a class="footer__link" href="">
+                        <a class="footer__social-link" href="">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-facebook.png" alt="">
                         </a>
-                        <a class="footer__link" href="">
+                        <a class="footer__social-link" href="">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-pinterest.png" alt="">
                         </a>
-                        <a class="footer__link" href="">
+                        <a class="footer__social-link" href="">
                             <img class="footer__img-social" src="./../assets/images/footer/footer-icon-instagram.png" alt="">
                         </a>
                     </div>
@@ -373,8 +372,7 @@
             <span class="footer__bottom-copy">&copy; 2020. All Rights Reserved.</span>
             <div class="footer__wrapper">
                 <span class="footer__wrapper-text">Go top</span>
-                <button class="footer__btn-top ">
-                    <img class="footer__btn-arrow-top" src="" alt="">
+                <button class="footer__btn-top">
                 </button>
             </div>
         </div>
