--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header__top">
         <!--кнопка бургер меню для медиазапроса==============-->
         <div class="header__burger-btn">
-            <img class="header__burger-btn-icon" src="./../assets/images/burger-menu-white.png" alt="burger-menu">
+            <img class="header__burger-btn-icon" src="./../assets/images/burger-menu--gray.png" alt="burger-menu">
         </div>
         <!--кнопка назад для медиазапроса==============-->
         <div class="header__back-btn">
@@ -319,39 +319,41 @@
                 <img class="logo__img" src="./../assets/images/footer/footer-logo.png" alt="Organic fresh food">
             </a>
         </div>
+        <div class="footer__centre-blog">
 
-        <div class="footer__information">
-            <h4 class="footer__title">Information</h4>
-            <ul class="footer__list">
-                <li class="footer__item">
-                    <a class="footer__link" href="">Search</a>
-                </li>
-                <li class="footer__item">
-                    <a class="footer__link" href="">Contact us</a>
-                </li>
-                <li class="footer__item">
-                    <a class="footer__link" href="">Terms & Conditions</a>
-                </li>
-                <li class="footer__item">
-                    <a class="footer__link" href="">Privacy Policy</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="footer__payment">
-            <div class="footer__payment-wrapper">
-                <h4 class="footer__title">Payment</h4>
+            <div class="footer__information">
+                <h4 class="footer__title">Information</h4>
+                <ul class="footer__list">
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Search</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Contact us</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Terms & Conditions</a>
+                    </li>
+                    <li class="footer__item">
+                        <a class="footer__link" href="">Privacy Policy</a>
+                    </li>
+                </ul>
             </div>
-            <div class="footer__icons-list">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
-                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
+
+            <div class="footer__payment">
+                <div class="footer__payment-wrapper">
+                    <h4 class="footer__title">Payment</h4>
+                </div>
+                <div class="footer__icons-list">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
+                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
+                </div>
             </div>
         </div>
 
