--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <img class="instagram_logo" src="./../assets/images/instagram/instagram-logo.png" alt="">ashasuperfoods
     </a>
     <div class="instagram__picture-item">
-        <img class="instagram__img" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
+        <img class="x" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img2.png" alt="img2">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img3.png" alt="img3">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img4.png" alt="img4">
@@ -319,43 +319,43 @@
                 <img class="logo__img" src="./../assets/images/footer/footer-logo.png" alt="Organic fresh food">
             </a>
         </div>
-        <div class="footer__centre-blog">
+<div class="footer__centre-blog">
 
-            <div class="footer__information">
-                <h4 class="footer__title">Information</h4>
-                <ul class="footer__list">
-                    <li class="footer__item">
-                        <a class="footer__link" href="">Search</a>
-                    </li>
-                    <li class="footer__item">
-                        <a class="footer__link" href="">Contact us</a>
-                    </li>
-                    <li class="footer__item">
-                        <a class="footer__link" href="">Terms & Conditions</a>
-                    </li>
-                    <li class="footer__item">
-                        <a class="footer__link" href="">Privacy Policy</a>
-                    </li>
-                </ul>
+        <div class="footer__information">
+            <h4 class="footer__title">Information</h4>
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a class="footer__link" href="">Search</a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="">Contact us</a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="">Terms & Conditions</a>
+                </li>
+                <li class="footer__item">
+                    <a class="footer__link" href="">Privacy Policy</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer__payment">
+            <div class="footer__payment-wrapper">
+                <h4 class="footer__title">Payment</h4>
             </div>
-
-            <div class="footer__payment">
-                <div class="footer__payment-wrapper">
-                    <h4 class="footer__title">Payment</h4>
-                </div>
-                <div class="footer__icons-list">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
-                    <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
-                </div>
+            <div class="footer__icons-list">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-AMEX.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Apple Pay.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Mastercard.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Discover.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-JCB.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Maestro.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Paypal.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Shopify-Pay.png" alt="">
+                <img class="footer__img-pay" src="./../assets/images/footer/footer-icon-Visa.png" alt="">
             </div>
         </div>
+    </div>
 
         <div class="footer__subscribe">
             <h4 class="footer__title">Don’t miss out!</h4>
