--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <img class="instagram_logo" src="./../assets/images/instagram/instagram-logo.png" alt="">ashasuperfoods
     </a>
     <div class="instagram__picture-item">
-        <img class="x" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
+        <img class="instagram__img" src="./../assets/images/instagram/instagram-img1.png" alt="img1">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img2.png" alt="img2">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img3.png" alt="img3">
         <img class="instagram__img" src="./../assets/images/instagram/instagram-img4.png" alt="img4">
