--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </nav>
 
-            <div class="header_right-bloc">
+            <div class="header__right-bloc">
                 <div class="header__personal personal">
                     <ul class="personal__list">
                         <li class="personal__list-item">
